--- a/templates/home_copy.html
+++ b/templates/home_copy.html
@@ -2311,7 +2311,7 @@
         <div class="login-modal-text">
             Sign in with Google to get unlimited image generations and access premium features.
         </div>
-        <button class="google-login-btn" onclick="loginWithGoogle()">
+        <button class="google-login-btn" onclick="loginWithGoogle()" id = "loginbuttonid1">
             <span>G</span>
             Continue with Google
         </button>
