--- a/templates/home.html
+++ b/templates/home.html
@@ -2862,7 +2862,7 @@ function handleAuthAction() {
     
     if (authToken) {
         // User is signed in, handle sign out
-        showLoginModal();
+        handleSignOut();
     } else {
         // User is not signed in, handle sign in
         showLoginModal();
