--- a/templates/home.html
+++ b/templates/home.html
@@ -2306,7 +2306,7 @@
     <div class="login-modal-content">
         <div class="login-modal-title">🎨 Continue Creating</div>
         <div class="credit-info">
-            ✨ You've used your free image generation! 
+            ✨ Login to continue! 
         </div>
         <div class="login-modal-text">
             Sign in with Google to get unlimited image generations and access premium features.
