--- a/templates/remove_background.html
+++ b/templates/remove_background.html
@@ -1400,7 +1400,7 @@
     <div class="login-modal-content">
         <div class="login-modal-title">✨ Continue Processing</div>
         <div class="credit-info">
-            🎯 You've used your free background removal! 
+            🎯 Login to continue!
         </div>
         <div class="login-modal-text">
             Sign in with Google to get unlimited background removals and access premium AI features.
