--- a/templates/home.html
+++ b/templates/home.html
@@ -1944,15 +1944,15 @@
 /* ADD these new media query rules */
 @media (max-width: 768px) {
     .profile-menu {
-        right: -100px;
+        right: -50px;
         min-width: 200px;
-        max-width: calc(100vw - 20px);
+        max-width: calc(100vw - 100px);
     }
 }
 
 @media (max-width: 480px) {
     .profile-menu {
-        right: -105px;
+        right: -55px;
         min-width: 180px;
         max-width: calc(100vw - 10px);
     }
@@ -2565,10 +2565,10 @@
         </a>
         
         <nav class="site-nav">
-            <a href="/remove-background">Features</a>
-            <a href="/remove-background">Background Remover</a>
+<!--             <a href="/remove-background">Features</a>
+ -->            <a href="/remove-background">Background Remover</a>
 <!--             <a href="#pricing">Pricing</a>
- -->            <a href="#support">Support</a>
+ -->          
             <div class="user-profile">
                 <div class="profile-btn" onclick="toggleProfileMenu()">
                     <img src="https://chatezzy.com/generated_images/gemini_1111_req_1754245880468_ktzofzepi_1_20250803_183127.png" alt="Profile" id="headerProfileImg">
