--- a/templates/home.html
+++ b/templates/home.html
@@ -2567,8 +2567,8 @@
         <nav class="site-nav">
 <!--             <a href="/remove-background">Features</a>
  -->            <a href="/remove-background">Background Remover</a>
-<!--             <a href="#pricing">Pricing</a>
- -->          
+            <a href="#pricing">Pricing</a>
+          
             <div class="user-profile">
                 <div class="profile-btn" onclick="toggleProfileMenu()">
                     <img src="https://chatezzy.com/generated_images/gemini_1111_req_1754245880468_ktzofzepi_1_20250803_183127.png" alt="Profile" id="headerProfileImg">
