--- a/templates/home.html
+++ b/templates/home.html
@@ -2567,7 +2567,7 @@
         <nav class="site-nav">
 <!--             <a href="/remove-background">Features</a>
  -->            <a href="/remove-background">Background Remover</a>
-            <a href="#pricing">Pricing</a>
+            <a href="/support">Contact</a>
           
             <div class="user-profile">
                 <div class="profile-btn" onclick="toggleProfileMenu()">
