--- a/templates/home.html
+++ b/templates/home.html
@@ -2793,7 +2793,7 @@
                 <div class="credit-display">
                     <span class="credit-label">Remaining Images:</span>
                     <span class="credit-count" id="creditCount">Loading...</span>
-                    <a href="/pricing" class="buy-credits-btn">
+                    <a href="/pricing" target="_blank" rel="noopener noreferrer" class="buy-credits-btn">
                     <span class="crown-icon">👑</span>
                     Buy Credits
                 </a>
