--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -81,11 +81,14 @@
 
         .logo::before {
             content: '';
-            width: 8px;
-            height: 8px;
-            background: #3b82f6;
-            border-radius: 50%;
+            width: 24px;
+            height: 24px;
+            background-image: url('https://firebasestorage.googleapis.com/v0/b/videos-downloader-13024.appspot.com/o/banana-decoration.png?alt=media&token=1fc2e419-14a2-46a8-b8e9-bb056a561ec2');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
+
 
         .header h1 {
             font-size: 3rem;
@@ -706,6 +709,7 @@
                     <p>State-of-the-art AI models for stunning results</p>
                 </div>
             </div>
+
         </div>
     </div>
 
