--- a/templates/support.html
+++ b/templates/support.html
@@ -177,7 +177,7 @@
             <p>For any queries related to payments or any other matters, please don't hesitate to reach out to us. Our team is ready to assist you with prompt and professional support.</p>
             
             <div class="contact-info">
-                <p><strong>Email us at:</strong> <a href="mailto:gnanobanana@gmail.com" class="email-link">gnanobanana@gmail.com</a></p>
+                <p><strong>Email us at:</strong> <a href="mailto:contact@googlenanobanana.com" class="email-link">contact@googlenanobanana.com</a></p>
             </div>
             
             <p>Please include as much detail as possible in your message to help us provide you with the most accurate assistance.</p>
