--- a/templates/home.html
+++ b/templates/home.html
@@ -1441,7 +1441,7 @@
     border-color: rgba(30, 41, 59, 0.3);
 }
 /* Modal Styles */
-.modal-overlay {
+.modal-overlay-edit {
     position: fixed;
     top: 0;
     left: 0;
@@ -1460,7 +1460,7 @@
     to { opacity: 1; }
 }
 
-.modal-content {
+.modal-content-edit {
     background: white;
     border-radius: 8px;
     padding: 20px;
@@ -3278,8 +3278,8 @@
     </div>
 </div>
 
-<div id="clearModal" class="modal-overlay" style="display: none;">
-    <div class="modal-content">
+<div id="clearModal" class="modal-overlay-edit" style="display: none;">
+    <div class="modal-content-edit">
         <div class="modal-title">Start New Generation?</div>
         <div class="modal-text">This will clear your current editing session and start fresh. Your current generated image will be lost.</div>
         <div class="modal-buttons">
@@ -4414,6 +4414,7 @@ function activateEditingMode(imageUrl) {
 
 // Show clear confirmation modal
 function showClearModal() {
+    console.log(":::::::::::::::::::::")
     document.getElementById('clearModal').style.display = 'flex';
 }
 
