--- a/templates/home.html
+++ b/templates/home.html
@@ -2016,7 +2016,7 @@
 /* ADD these new media query rules */
 @media (max-width: 768px) {
     .profile-menu {
-        right: -50px;
+        right: -15px;
         min-width: 200px;
         max-width: calc(100vw - 100px);
     }
@@ -2024,7 +2024,7 @@
 
 @media (max-width: 480px) {
     .profile-menu {
-        right: -55px;
+        right: -15px;
         min-width: 180px;
         max-width: calc(100vw - 10px);
     }
@@ -3357,6 +3357,7 @@
 <!--             <a href="/remove-background">Features</a>
  -->            <a href="/remove-background">Background Remover</a>
             <a href="/pricing">Pricing</a>
+             <a href="/support">Contact</a>
 
             <div class="user-profile">
                 <div class="profile-btn" onclick="toggleProfileMenu()">
