--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -592,7 +592,8 @@
                 Nano Banana
             </div>
             <h1>Simple, Transparent Pricing</h1>
-            <p>Report any issue at contact@googlenanobanana.com</p>
+            <p>Report any issue at <a href="mailto:contact@googlenanobanana.com">contact@googlenanobanana.com</a></p>
+
 
         </div>
 
